--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" :"node server.js"
+    "dev": "node server.js"
   },
   "author": "Man Yang",
   "license": "ISC",
@@ -29,6 +29,7 @@
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
+    "mongoose": "^4.6.6",
     "vue": "^1.0.26"
   }
 }
