--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-hot-middleware": "^2.13.1"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "mongoose": "^4.6.6",
     "vue": "^1.0.26"
   }
