--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start karma.config.js",
     "dev": "node server.js"
   },
   "author": "Man Yang",
@@ -18,6 +18,13 @@
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.24.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-htmlfile-reporter": "^0.3.4",
+    "karma-jasmine": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
     "node-sass": "^3.12.2",
     "sass-loader": "^4.0.2",
     "vue": "^1.0.26",
